# react-native-amap

./: .gitignore  package.json  react-native.config.js  readme.md  tsconfig.json
android/: build.gradle  custom-android.toolchain.cmake
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
android/src/main/java/com/amaps/: AmapMapView.kt  AmapMapViewManager.kt  AmapMapsModule.kt  AmapMapsPackage.kt  NativeAmapMapsSpec.kt
android/src/main/jni/: CMakeLists.txt
lib/android/: build.gradle  proguard-rules.pro
lib/android/src/main/: AndroidManifest.xml
lib/android/src/main/java/qiuxiang/amap3d/: AMap3DPackage.kt  Utils.kt
lib/android/src/main/java/qiuxiang/amap3d/map_view/: FabricMapViewManager.kt  MapView.kt  MapViewManager.kt  Marker.kt  MarkerManager.kt  PolygonManager.kt  PolylineManager.kt
lib/android/src/main/java/qiuxiang/amap3d/modules/: AMapSdkSpec.java  SdkModule.kt
lib/android/src/main/jni/: AMap3DModule.cpp  Android.mk  Application.mk
lib/android/src/main/jni/react/renderer/components/amap3d/: AMap3DComponentsRegistry.cpp  ComponentDescriptors.h  ComponentNames.h  Props.h  ShadowNodes.h  States.h
lib/src/: NativeAMap3DModule.ts  NativeAMapMarker.ts  NativeAMapPolyline.ts  NativeAMapView.ts  index.ts  map-view.tsx  marker.tsx  polyline.tsx
src/: AmapMap.ts  NativeAmapMaps.ts  index.d.ts  index.ts
